syntax = "proto3";

package email;

message Email {
 string to = 1;
 string cc = 2;
 string subject = 3;
 string body = 4;
 string from = 5;
}

message SendEmail {
 string to = 1;
 string cc = 2;
 string subject = 3;
 string body = 4;
}

message SendEmailResponse {
 bool success = 1;
 string message = 2;
}

service EmailService {
 rpc SendEmail(SendEmail) returns (SendEmailResponse);
}
